# first-ormpp

./: Observer.hpp
first_ormpp/: CMakeLists.txt  README.txt  config_win.bat
first_ormpp/src/: CMakeLists.txt
first_ormpp/src/iguana/: xml.hpp
first_ormpp/src/include/: CMakeLists.rules
first_ormpp/src/include/ormpp/: dbng.hpp  mysql.hpp  ormpp_cfg.hpp  type_mapping.hpp  utility.hpp
first_ormpp/src/main/: CMakeLists.rules  OrmPPProxy.h  main.cpp
